# SublimeHaskell

./: .gitignore  .hgignore  .pylintrc  .travis.yml  2.1.27.md  Cabal.sublime-commands  Cabal.tmLanguage  CabalInspector.hs  Context.sublime-menu  Cubicle.tmTheme  Data.sublime-snippet  Default.sublime-commands  Default.sublime-keymap  Haskell-SublimeHaskell.tmLanguage  Haskell.sublime-completions  LICENSE.md  Literate Haskell Bird Style.tmLanguage  LiterateHaskellBirdStyle.tmLanguage  Main.sublime-menu  Makefile  ModuleInspector.hs  Newtype.sublime-snippet  Qualified.sublime-snippet  README.md  README.txt  Record.sublime-snippet  Redmond.tmTheme  SubHaskEditing.md  SublimeHaskell.cabal  SublimeHaskell.sublime-build  SublimeHaskell.sublime-commands  SublimeHaskell.sublime-settings  TODO.txt  add_import.py  autobuild.py  autocomplete.py  backend_cmds.py  build.py  cabal.py  cabalbuild.py  (+38 more)
Commands/: Default.sublime-commands
Completions/: GHC-Extensions.sublime-completions  Haskell.sublime-completions
Keymaps/: Default.sublime-keymap
Menus/: Context.sublime-menu  Main.sublime-menu
Messages/: 1.0.0.md  1.0.1.md  1.0.2.md  1.0.3.md  1.1.0.md  1.2.0.md  1.2.1.md  1.2.2.md  1.2.3.md  1.2.4.md  1.2.5.md  1.x.y-collected.md  2.0.0.md  2.0.1.md  2.0.2.md  2.0.3.md  2.0.4.md  2.0.5.md  2.0.6.md  2.0.7.md  2.1.0.md  2.1.1.md  2.1.10.md  2.1.11.md  2.1.12.md  2.1.14.md  2.1.15.md  2.1.16.md  2.1.17.md  2.1.18.md  2.1.19.md  2.1.2.md  2.1.20.md  2.1.21.md  2.1.22.md  2.1.23.md  2.1.24.md  2.1.25.md  2.1.26.md  2.1.28.md  (+14 more)
Settings/: SublimeHaskell.sublime-settings
Snippets/: Data.sublime-snippet  Double import.sublime-snippet  DoubleImport.sublime-snippet  IfThenElse.sublime-snippet  Inline.sublime-snippet  Language.sublime-snippet  Newtype.sublime-snippet  Options.sublime-snippet  Qualified.sublime-snippet  Record.sublime-snippet
Syntaxes/: Cabal.tmLanguage  Cabal.tmPreferences  Comments.tmPreferences  Haskell-ST2.YAML-tmLanguage  Haskell-SublimeHaskell.YAML-tmLanguage  Haskell-SublimeHaskell.old-tmLang  Haskell-SublimeHaskell.sublime-syntax  Haskell-SublimeHaskell.tmLanguage  Haskell.LANGUAGE.sublime-completions  Haskell.OPTIONS_GHC.sublime-completions  (+10 more)
(+67 files in other folders)
