name:                SublimeHaskell
version:             0.1.0.0
synopsis:            SublimeHaskell's tools            
homepage:            https://github.com/SublimeHaskell/SublimeHaskell

license:             MIT
license-file:        LICENSE.txt
author:              Keith Holman
-- maintainer:        
-- copyright:           

category:            Development
build-type:          Simple

cabal-version:       >=1.10

executable ModuleInspector
  main-is:             ModuleInspector.hs

  other-extensions:    OverloadedStrings
  build-depends:       base
                      ,ghc
                      ,text >=1.0
                      ,containers >=0.4
                      ,directory >=1.0
                      ,aeson >= 0.7
                      ,haskell-src-exts == 1.15.0.1
  if impl(ghc < 7.8.2)
    build-depends:     haddock < 2.15
  else
    build-depends:     haddock-api == 2.16.*
                      ,haddock-library == 1.2.*

  default-language:    Haskell2010


executable CabalInspector
  main-is:             CabalInspector.hs

  build-depends:       base
                      ,Cabal >=1.18
                      ,text >=1.0
                      ,aeson >= 0.7

  default-language:    Haskell2010
