name:                SublimeHaskell
version:             0.1
synopsis:            Tools bundled with SublimeHaskell
description:         
license:             MIT
license-file:        LICENSE.txt
author:              SublimeHaskell Team
maintainer:          SublimeHaskell Team
category:            IDE Tools
build-type:          Simple

cabal-version: >= 1.10

source-repository head
  type: git
  location: git://github.com/SublimeHaskell/SublimeHaskell.git

executable ModuleInspector
  main-is: ModuleInspector.hs
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    containers,
    directory,
    ghc,
    haddock,
    haskell-src-exts,
    text

executable CabalInspector
  main-is: CabalInspector.hs
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    Cabal,
    text
